--- a/css/header.css
+++ b/css/header.css
@@ -5,5 +5,6 @@ header.main-layout{
   top: 0;
   width: 100%;
   z-index: 1000;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.8);
+  border-bottom: rgba(255,255,255,0.1) solid 1px;
 }
